# dds-usingc

./: .gitignore  CMakeLists.txt  README.md
include/: dds_c_define.h  dds_c_interface.h  dds_c_qos.h  ddsc.h  ddsoptionalparse.h
lib_arm64/: libssl.so.3
lib_x86/: libssl.so.3
src/: main.c  test.c
